# feup-ri

./: README.md  model.config  move.py
MadDuckAvoidance/: README.md
MadDuckAvoidance/src/: create_sets.py  custom_map.yaml  detect_duckie.py  duck_annotations_all.json  duckie_example.jfif  madduck_avoidance.py  testdata.txt  traindata.txt  view_box.py
MadDuckAvoidance/src/cfg/: duckie.data  yolov3-duckie.cfg
MadDuckAvoidance/src/duck_frames/: frame_000024.txt  frame_000025.txt  frame_000028.txt  frame_000029.txt  frame_000030.txt  frame_000031.txt  frame_000032.txt  frame_000033.txt  frame_000042.txt  frame_000043.txt  frame_000044.txt  frame_000048.txt  frame_000051.txt  frame_000052.txt  frame_000053.txt  frame_000054.txt  frame_000055.txt  frame_000056.txt  frame_000057.txt  frame_000058.txt  frame_000060.txt  frame_000061.txt  frame_000062.txt  frame_000063.txt  frame_000064.txt  frame_000065.txt  frame_000066.txt  frame_000067.txt  frame_000068.txt  frame_000069.txt  frame_000070.txt  frame_000071.txt  frame_000072.txt  frame_000075.txt  frame_000082.txt  frame_000083.txt  frame_000084.txt  frame_000085.txt  frame_000086.txt  frame_000087.txt  (+886 more)
TurtleBot/: README.md
TurtleBot/robot_gazebo/: package.xml
TurtleBot/robot_gazebo/launch/: robot.launch
TurtleBot/robot_gazebo/models/model_wall/: model.config  model.sdf
TurtleBot/robot_gazebo/scripts/: move.py
robot_gazebo/: CMakeLists.txt  package.xml
robot_gazebo/launch/: robot.launch
robot_gazebo/worlds/: robot.world
