<?xml version="1.0"?>
<package format="2">
<name>robot_gazebo</name>
<version>0.0.0</version>
<description>The robot_gazebo package</description>

<maintainer email="joaocarlosmrp@gmail.com">joaocarlosmrp</maintainer>

<license>TODO</license>

<buildtool_depend>catkin</buildtool_depend>
<depend>gazebo_ros</depend>
<exec_depend>gazebo</exec_depend>

<export>
<gazebo_ros gazebo_model_path="${prefix}"/>
<gazebo_ros gazebo_model_path="${prefix}/models"/>
</export>
</package>
